--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Mocha Spec Runner</title>
-        <link rel="stylesheet" href="../bower_components/mocha/mocha.css">
+        <link rel="stylesheet" href="../vendor/mocha/mocha.css">
     </head>
     <body>
         <div id="mocha"></div>
         
-        <script data-main="spec-runner" src="../bower_components/requirejs/require.js"></script>      
+        <script data-main="spec-runner" src="../vendor/requirejs/require.js"></script>      
     </body>
 </html>
