--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,10 @@
     </head>
     <body>
         <div id="mocha"></div>
-        
+        <script type="text/javascript" src="../vendor/mocha/mocha.js"></script>
+        <script type="text/javascript">
+            mocha.setup({ui: 'bdd', ignoreLeaks: true, reporter: 'html'});
+        </script>
         <script data-main="spec-runner" src="../vendor/requirejs/require.js"></script>      
     </body>
 </html>
