Experiment with Backbone.ModelBinder

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
         
     </head>
     <body>
-        <table width="100%">
+        <table>
             <thead>
                 <tr>
-                    <th width="1%"><input type="checkbox" name="selectAll" id="selectAll"/></th>
-                    <th class="sort sortable" data-sortBy="name">Name</th>
-                    <th class="sort sortable" data-sortBy="category">Kategori</th>
-                    <th class="sort sortable" data-sortBy="instructions">Instruktioner</th>
+                    <th>Name</th>
+                    <th>Kategori</th>
+                    <th>Instruktioner</th>
                 </tr>
             </thead>
             <tbody>
