Basic search and filter with CollectionBinder

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         
     </head>
     <body>
+        <input type="button" id="createModel" value="Create Model"/>
+        <input type="button" id="removeModel" value="Remove Last Model"/>
+        <input type="button" id="resetCollection" value="Reset Collection"/>
+        <input type="text" id="filter" placeholder="filter me" />       
+        
         <table>
             <thead>
                 <tr>
@@ -20,8 +25,7 @@
             </thead>
             <tbody>
             </tbody>
-        </table>
-        <input type="text" id="filter" placeholder="filter me" />        
+        </table> 
         <script data-main="js/main" src="vendor/requirejs/require.js"></script>
     </body>
 </html>
