--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/screen.css">
+        <link rel="stylesheet" href="css/main.css">
         <title>RIA development with JavaScript</title>
         
     </head>
