Refactor app view

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="col-3-10 site-middle">
             <div class="filter">
-                <input type="text" id="filter" placeholder="filter me" />
+                <input type="text" id="search" placeholder="filter me" />
                 <p>Kategori combobox</p>
                 <p>Datum från</p>
                 <p>Datum till</p>
