--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/main.css">
         <title>RIA development with JavaScript</title>
-        
     </head>
     <body>
 
@@ -51,6 +50,6 @@
             </table>
         </div>
 
-        <script data-main="js/main" src="vendor/requirejs/require.js"></script>
+        <script data-main="js/config" src="vendor/requirejs/require.js"></script>
     </body>
 </html>
