Refactor view logic to controller views. Also create template for create and app.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="col-2-10 site-left">
             <nav>
                 <p>
-                    <a href="#">Recept</a>
+                    <a href="/">Recept</a>
                 </p>
                 <p>
-                    <a href="#" id="createModel">Lägg till</a>
+                    <a href="/create" id="createModel">Lägg till</a>
                 </p>
                 <p>
                     <a href="#" id="removeModel">Ta bort</a>
@@ -27,27 +27,7 @@
             </nav>
         </div>
 
-        <div class="col-3-10 site-middle">
-            <div class="filter">
-                <input type="text" id="search" placeholder="filter me" />
-                <p>Kategori combobox</p>
-                <p>Datum från</p>
-                <p>Datum till</p>
-            </div>
-        </div>
-
-        <div class="col-5-10 site-right">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Kategori</th>
-                        <th>Instruktioner</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+        <div id="riaApp">
         </div>
 
         <script data-main="js/config" src="vendor/requirejs/require.js"></script>
