Make menu into Backbone view.

--- a/index.html
+++ b/index.html
@@ -10,24 +10,10 @@
     </head>
     <body>
 
-        <div class="col-2-10 site-left">
-            <nav>
-                <p>
-                    <a href="/">Recept</a>
-                </p>
-                <p>
-                    <a href="/create" id="createModel">Lägg till</a>
-                </p>
-                <p>
-                    <a href="#" id="removeModel">Ta bort</a>
-                </p>
-                <p>
-                    <a href="#" id="resetCollection">Reset</a>
-                </p>
-            </nav>
+        <div class="main-menu">    
         </div>
-
-        <div id="riaApp">
+        
+        <div class="ria-app">
         </div>
 
         <script data-main="js/config" src="vendor/requirejs/require.js"></script>
