Major refactoring. Use module pattern.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="static/assets/css/main.css">
         <title>RIA development with JavaScript</title>
     </head>
     <body>
 
-        <div class="main-menu">    
-        </div>
-        
-        <div class="ria-app">
+        <!-- Wrap all page content here -->
+        <div id="wrap">
         </div>
 
-        <script data-main="js/config" src="vendor/requirejs/require.js"></script>
+        <div id="footer">
+            <p class="text-muted credit">&copy; Kim Grönqvist</p>
+        </div>
+
+        <script data-main="static/config" 
+                src="static/assets/js/require.js"></script>
     </body>
 </html>
