--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 
         <script data-main="static/config" 
                 src="static/assets/js/require.js"></script>
+        <script src="http://10.25.131.185:35729/livereload.js"></script>
     </body>
 </html>
